Fix the issue of ctrl + F search scroll in detail page. - In opus.css (line 1411-1420), add overflow: overflow and hide the   webkit scrollbar to perfect scrollbar container. This will enable ctrl   + F search scroll for perfect scrollbar in webkit supported browsers.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -1408,6 +1408,15 @@ even when screen is narrow */
     position: relative;
     min-width: 470px;
     max-width: 800px;
+    /* setting container overflow to scroll and hide webkit scrollbar is
+    the workaround for ctrl + F search scroll to work with perfect scrollbar */
+    overflow-y: scroll !important;
+}
+
+/* As mentioned above, this is part of steps to make ctrl + F search scroll
+to work with perfect scrollbar */
+.op-detail-metadata::-webkit-scrollbar {
+    display: none;
 }
 
 /* Make detail left pane takes up 50% of width */
